laporan_error.txt
=== PENYEBAB UTAMA MANIFEST MERGER GAGAL ===
> Task :app:createDebugCompatibleScreenManifests
> Task :app:extractDeepLinksDebug
> Task :app:parseDebugLocalResources
> Task :app:processDebugMainManifest
> Task :app:processDebugManifest
> Task :app:mergeDebugShaders
> Task :app:compileDebugShaders NO-SOURCE
> Task :app:generateDebugAssets UP-TO-DATE
> Task :app:mergeDebugAssets
> Task :app:compressDebugAssets
> Task :app:processDebugJavaRes NO-SOURCE
> Task :app:desugarDebugFileDependencies
> Task :app:mergeDebugJniLibFolders
> Task :app:processDebugManifestForPackage
> Task :app:mergeDebugJavaResource
> Task :app:checkDebugDuplicateClasses
> Task :app:processDebugResources
> Task :app:mergeExtDexDebug

> Task :app:compileDebugJavaWithJavac
/home/runner/work/NovaAgen.v2/NovaAgen.v2/app/src/main/java/com/novaagent/app/infrastructure/injector/SystemActionInjector.java:25: error: cannot find symbol
        if (cmd.speech != null && !cmd.speech.isEmpty()) {
               ^
  symbol:   variable speech
  location: variable cmd of type ActionCommandDto
/home/runner/work/NovaAgen.v2/NovaAgen.v2/app/src/main/java/com/novaagent/app/infrastructure/injector/SystemActionInjector.java:25: error: cannot find symbol
        if (cmd.speech != null && !cmd.speech.isEmpty()) {
                                      ^
  symbol:   variable speech
  location: variable cmd of type ActionCommandDto
/home/runner/work/NovaAgen.v2/NovaAgen.v2/app/src/main/java/com/novaagent/app/infrastructure/injector/SystemActionInjector.java:26: error: cannot find symbol
            EventBus.getInstance().publish(new AgentEvent(AgentEvent.EventType.VOICE_RECEIVED, cmd.speech));
                                                                                                  ^
  symbol:   variable speech
